commit before adding min window code

--- a/board_stereo.yaml
+++ b/board_stereo.yaml
@@ -1,9 +1,25 @@
 --- 
-calibration: four_point_manual
-four_point_height: 20*5
-four_point_width: 20*7
-num_rects_height: 5
-num_rects_width: 7
-rect_height: 20
-rect_width: 20
-units: mm
+%% These are required parameters ---------%%
+
+%% Checkerboard parameters
+num_squares_height = 3
+num_squares_width = 7
+square_size = 100
+units = mm
+
+%% Four-point detection parameters
+calibration = four_point_manual
+four_point_height = 100*3
+four_point_width = 100*7
+
+%% Beyond here are optional parameters ----%%
+
+%% Homography parameters
+homography_it_cutoff = 5
+homography_norm_cutoff = 1e-5
+
+%% Corner refinement parameters
+refine_it_cutoff = 10
+refine_norm_cutoff = 0.05
+refine_window_factor = 2/3
+refine_window_min_size = 30
