--- a/board_stereo.yaml
+++ b/board_stereo.yaml
@@ -2,24 +2,28 @@
 %% These are required parameters ---------%%
 
 %% Checkerboard parameters
-num_squares_height = 3
-num_squares_width = 5
+num_squares_height = 5
+num_squares_width = 7
 square_size = 100
 units = mm
 
 %% Four-point detection parameters
 calibration = four_point_manual
-four_point_height = 100*3
-four_point_width = 100*5
+four_point_height = 100*5
+four_point_width = 100*7
 
 %% Beyond here are optional parameters ----%%
 
 %% Homography parameters
-homography_it_cutoff = 5
-homography_norm_cutoff = 1e-5
+homography_it_cutoff = 10
+homography_norm_cutoff = 1e-6
 
 %% Corner refinement parameters
-refine_it_cutoff = 10
-refine_norm_cutoff = 0.05
-refine_default_window_factor = 2/3
-refine_window_min_size = 10
+refine_corner_it_cutoff = 10
+refine_corner_norm_cutoff = 0.05
+refine_corner_default_window_factor = 2/3
+refine_corner_window_min_size = 10
+
+%% Parameter refinement parameters
+refine_param_it_cutoff = 20
+refine_param_norm_cutoff = 1e-6
