--- a/test/single.conf
+++ b/test/single.conf
@@ -1,37 +1,36 @@
---- 
-%%  Calibration board info ---------------%%
+%  Calibration board info -----------------%
 
-%% Checkerboard parameters
-num_squares_height = 9
-num_squares_width = 9
+% Checkerboard parameters
+num_squares_height = 11
+num_squares_width = 11
 square_size = 100
 units = mm
 
-%% Four-point detection parameters
+% Four-point detection parameters
 calibration = four_point_manual
 four_point_height = 100*11
 four_point_width = 100*11
 
-%% Algorithmic info ----------------------%%
+% Algorithmic info ------------------------%
 
-%% Verbosity
+% Verbosity
 verbose = 1
 
-%% Homography parameters
+% Homography parameters
 homography_it_cutoff = 10
 homography_norm_cutoff = 1e-6
 
-%% Corner refinement parameters
+% Corner refinement parameters
 refine_corner_it_cutoff = 10
 refine_corner_norm_cutoff = 0.05
 refine_corner_default_window_factor = 2/3
 refine_corner_window_min_size = 10
 
-%% Parameter refinement parameters
+% Parameter refinement parameters
 refine_param_it_cutoff = 20
 refine_param_norm_cutoff = 1e-6
 
-%% Plotting info -------------------------%%
+% Plotting info ---------------------------%
 
-%% Camera size
+% Camera size
 camera_size = 150
