added blob detection code

--- a/tests/configs/single.conf
+++ b/tests/configs/single.conf
@@ -30,6 +30,13 @@ refine_corner_window_min_size = 10
 refine_param_it_cutoff = 20
 refine_param_norm_cutoff = 1e-6
 
+% Blob detection parameters
+blob_detect_s = 2;
+blob_detect_num_octaves = 4;
+blob_detect_contrast_cutoff = 0.03;
+blob_detect_r_cutoff = 10;
+blob_detect_second_moment_cutoff = 3;
+
 % Plotting info ---------------------------%
 
 % Camera size
