deciding to give up on the sift image pyramid blob detector; it just wasn't detecting blobs consistently enough; go back to this commit if you want to see image pyramid code

--- a/tests/configs/single.conf
+++ b/tests/configs/single.conf
@@ -31,11 +31,15 @@ refine_param_it_cutoff = 20
 refine_param_norm_cutoff = 1e-6
 
 % Blob detection parameters
-blob_detect_s = 2;
+blob_detect_s = 4;
 blob_detect_num_octaves = 4;
 blob_detect_contrast_cutoff = 0.03;
 blob_detect_r_cutoff = 10;
 blob_detect_second_moment_cutoff = 3;
+
+% Four point marker detection parameters
+marker_config_path = +markers/marker.conf
+marker_templates_path = +markers/marker_templates.txt
 
 % Plotting info ---------------------------%
 
