added updated and more accurate blob detector

--- a/tests/configs/single.conf
+++ b/tests/configs/single.conf
@@ -1,4 +1,4 @@
-%  Calibration board info -----------------%
+% Calibration board info -----------------%
 
 % Checkerboard parameters
 num_squares_height = 9
@@ -31,11 +31,12 @@ refine_param_it_cutoff = 20
 refine_param_norm_cutoff = 1e-6
 
 % Blob detection parameters
-blob_detect_s = 4;
-blob_detect_num_octaves = 4;
-blob_detect_contrast_cutoff = 0.03;
-blob_detect_r_cutoff = 10;
-blob_detect_second_moment_cutoff = 3;
+blob_detect_r1 = 2
+blob_detect_r2 = realmax
+blob_detect_s = 12
+blob_detect_num_cutoff = 50
+blob_detect_it_cutoff = 5
+blob_detect_norm_cutoff = 1e-2
 
 % Four point marker detection parameters
 marker_config_path = +markers/marker.conf
