added four point detector with debuggin

--- a/tests/configs/single.conf
+++ b/tests/configs/single.conf
@@ -33,7 +33,7 @@ refine_param_norm_cutoff = 1e-6
 % Blob detection parameters
 blob_detect_r1 = 2
 blob_detect_r2 = realmax
-blob_detect_s = 12
+blob_detect_step = 0.5
 blob_detect_num_cutoff = 50
 blob_detect_it_cutoff = 5
 blob_detect_norm_cutoff = 1e-2
@@ -41,6 +41,9 @@ blob_detect_norm_cutoff = 1e-2
 % Four point marker detection parameters
 marker_config_path = +markers/marker.conf
 marker_templates_path = +markers/marker_templates.txt
+marker_padding = 5;
+marker_it_cutoff = 50;
+marker_norm_cutoff = 1e-6;
 
 % Plotting info ---------------------------%
 
