--- a/+markers/marker.conf
+++ b/+markers/marker.conf
@@ -1,9 +1,9 @@
-% Marker configuration
+% Marker configuration - note that marking around blob can make marker radius appear smaller to LoG detector
 marker_radius = 50
-radius_num_samples = 31
+radius_num_samples = 50
 radius_norm_range =
-[0.55 3.55]
-theta_num_samples = 101
+[0.25 4.0]
+theta_num_samples = 100
 
 % Marker paths
 marker_paths = +markers/1.png
