improved gui for four point detection code and updated gauss newton optimizer to levenberg marquardt

--- a/tests/configs/single.conf
+++ b/tests/configs/single.conf
@@ -31,8 +31,8 @@ refine_param_it_cutoff = 20
 refine_param_norm_cutoff = 1e-6
 
 % Blob detection parameters
-blob_detect_r1 = 2
-blob_detect_r2 = realmax
+blob_detect_r_range1 = 2
+blob_detect_r_range2 = realmax
 blob_detect_step = 0.5
 blob_detect_num_cutoff = 50
 blob_detect_it_cutoff = 5
