tested out frontal projection refinement and also added code for the possibility of adding different localization markers. I found that the frontal projection refinement does not make much of a difference so I'm keeping this as a separate branch and leaving master alone

--- a/tests/configs/stereo.conf
+++ b/tests/configs/stereo.conf
@@ -1,12 +1,13 @@
 % Calibration board info -----------------%
 
 % Checkerboard parameters
-num_squares_height = 5
-num_squares_width = 7
-square_size = 100
+num_targets_height = 5
+num_targets_width = 7
+target_spacing = 100
 units = mm
 
 % Four-point detection parameters
-calibration = four_point_manual
+calibration_type = four_point_manual
+calibration_pattern = checker
 four_point_height = 100*5
 four_point_width = 100*7
