--- a/tests/configs/single.conf
+++ b/tests/configs/single.conf
@@ -1,12 +1,13 @@
 % Calibration board info -----------------%
 
 % Checkerboard parameters
-num_squares_height = 11
-num_squares_width = 11
-square_size = 100
+num_targets_height = 11
+num_targets_width = 11
+target_spacing = 100
 units = mm
 
 % Four-point detection parameters
-calibration = four_point_manual
+calibration_type = four_point_manual
+calibration_pattern = checker
 four_point_height = 100*11
 four_point_width = 100*11
