fixed test calibration config files

--- a/tests/configs/single.conf
+++ b/tests/configs/single.conf
@@ -8,6 +8,6 @@ units = mm
 
 % Four-point detection parameters
 calibration_type = four_point_manual
-calibration_pattern = checker
+calibration_target = checker
 four_point_height = 100*11
 four_point_width = 100*11
