committing recent four point detector update

--- a/+markers/marker.conf
+++ b/+markers/marker.conf
@@ -1,9 +1,10 @@
 % Marker configuration - note that marking around blob can make marker radius appear smaller to LoG detector
-marker_radius = 50
-radius_num_samples = 50
-radius_norm_range =
+r_marker = 50
+num_samples_theta = 100
+num_samples_radius = 50
+range_r_norm =
 [0.25 4.0]
-theta_num_samples = 100
+interp = cubic
 
 % Marker paths
 marker_paths = +markers/1.png
