finishing log four point detector

--- a/+markers/marker.conf
+++ b/+markers/marker.conf
@@ -1,9 +1,10 @@
-% Marker configuration - note that marking around blob can make marker radius appear smaller to LoG detector
-r_marker = 50
+% Marker configuration - note that markings around blob can make marker 
+% radius appear smaller to LoG detector
+radius_marker = 50
 num_samples_theta = 100
-num_samples_radius = 50
+num_samples_radius = 30
 range_r_norm =
-[0.25 4.0]
+[1.25 4.25]
 interp = cubic
 
 % Marker paths
