--- a/tests/data/stereo1/stereo1.conf
+++ b/tests/data/stereo1/stereo1.conf
@@ -1,14 +1,16 @@
 % Checkerboard parameters
-target_type = checker
-num_targets_height = 6
-num_targets_width = 7
-target_spacing = 100
-units = mm
+cb_class            = class.cb_csgrid_cfp
+target              = checker
+height_cb           = 800
+width_cb            = 900
+num_targets_height  = 6
+num_targets_width   = 7
+target_spacing      = 100
+height_fp           = 100*5
+width_fp            = 100*6
 
-% Four-point parameters
-height_fp = 100*5
-width_fp = 100*6
-
-% Algorithmic stuff
+% Optimization
+target_optimization = edges
+calib_optimization  = distortion_refinement
 distortion_refinement_it_cutoff = 2
-verbosity = 0
+verbosity           = 0
