fixed unit tests

--- a/tests/data/checker/checker.conf
+++ b/tests/data/checker/checker.conf
@@ -1,6 +1,8 @@
-% Checkerboard parameters
-cb_class            = class.cb_csgrid_cfp
+% Checkerboard target
 target              = checker
+target_optimization = edges
+
+% Checkerboard geometry
 height_cb           = 1400
 width_cb            = 1400
 num_targets_height  = 24
@@ -13,9 +15,11 @@ idx_target_removal  =
 112 113 114 115 116 136 137 138 139 140 160 161 162 163 164 184 185 186 187 188 208 209 210 211 212
 365 366 367 368 369 389 390 391 392 393 413 414 415 416 417 437 438 439 440 441 461 462 463 464 465
 376 377 378 379 380 400 401 402 403 404 424 425 426 427 428 448 449 450 451 452 472 473 474 475 476 
+obj_cb_geom         = class.cb_geom.csgrid_cfp
 
 % Optimization
-target_optimization = edges
 calib_optimization  = distortion_refinement
 distortion_refinement_it_cutoff = 2
+
+% Verbosity
 verbosity           = 0
