--- a/tests/data/circle/circle.conf
+++ b/tests/data/circle/circle.conf
@@ -1,6 +1,9 @@
-% Checkerboard parameters
-cb_class            = class.cb_csgrid_cfp
+% Checkerboard target
 target              = circle
+circle_radius       = 11.837742948488916
+target_optimization = edges
+
+% Checkerboard parameters
 height_cb           = 1400
 width_cb            = 1400
 num_targets_height  = 25
@@ -13,10 +16,11 @@ idx_target_removal  =
 142 143 144 145 167 168 169 170 192 193 194 195 217 218 219 220
 406 407 408 409 431 432 433 434 456 457 458 459 481 482 483 484
 417 418 419 420 442 443 444 445 467 468 469 470 492 493 494 495
-circle_radius       = 11.837742948488916
+obj_cb_geom         = class.cb_geom.csgrid_cfp
 
 % Optimization
-target_optimization = edges
 calib_optimization  = distortion_refinement
 distortion_refinement_it_cutoff = 2
+
+% Verbosity
 verbosity           = 0
