--- a/tests/data/stereo1/stereo1.conf
+++ b/tests/data/stereo1/stereo1.conf
@@ -1,6 +1,8 @@
-% Checkerboard parameters
-cb_class            = class.cb_csgrid_cfp
+% Checkerboard target
 target              = checker
+target_optimization = edges
+
+% Checkerboard parameters
 height_cb           = 800
 width_cb            = 900
 num_targets_height  = 6
@@ -8,9 +10,11 @@ num_targets_width   = 7
 target_spacing      = 100
 height_fp           = 100*5
 width_fp            = 100*6
+obj_cb_geom         = class.cb_geom.csgrid_cfp
 
 % Optimization
-target_optimization = edges
 calib_optimization  = distortion_refinement
 distortion_refinement_it_cutoff = 2
+
+% Verbosity
 verbosity           = 0
