updated configs for unit tests

--- a/tests/data/checker/checker_fr.conf
+++ b/tests/data/checker/checker_fr.conf
@@ -20,6 +20,7 @@ obj_cb_geom         = class.cb_geom.csgrid_cfp
 % Optimization
 calib_optimization  = frontal_refinement
 distortion_refinement_it_cutoff = 2
+apply_covariance_optimization = true
 
 % Verbosity
 verbosity           = 0
