--- a/tests/data/stereo/stereo.conf
+++ b/tests/data/stereo/stereo.conf
@@ -15,6 +15,7 @@ obj_cb_geom         = class.cb_geom.csgrid_cfp
 % Optimization
 calib_optimization  = distortion_refinement
 distortion_refinement_it_cutoff = 2
+apply_covariance_optimization = true
 
 % Verbosity
 verbosity           = 0
